--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,10 @@
 {
 	"dependencies": {
 		"tailwindcss": "^4.1.14",
-		"@tailwindcss/cli": "^4.1.14"
+		"@tailwindcss/cli": "^4.1.14",
+		"dotenv": "^16.4.5"
+	},
+	"scripts": {
+		"start": "node server.js"
 	}
 }
