--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,7 @@
 {
 	"dependencies": {
 		"tailwindcss": "^4.1.14",
-		"@tailwindcss/cli": "^4.1.14",
-		"dotenv": "^16.4.5"
+		"@tailwindcss/cli": "^4.1.14"
 	},
 	"scripts": {
 		"start": "node server.js"
